# mage

./: CMakeLists.txt  README.md
headers/: app.hpp  appInfo.hpp  app_info.h  bufferOffset.hpp  circle.hpp  color.hpp  errorMacros.hpp  helper_funcs.h  init.h  init.hpp  loadShader.h  loadShader.hpp  load_shaders.h  mageObject.hpp  oglHeaders.hpp  particle.hpp  point.hpp  setup.h  setup.hpp  simpleArray.hpp  triangle.hpp  types.hpp  vec.hpp  vertexArray.hpp  vmath.hpp
lib/: app.cpp  circle.cpp  color.cpp  helper_funcs.c  init.c  init.cpp  loadShader.c  loadShader.cpp  load_shaders.c  particle.cpp  point.cpp  simpleArray.cpp  triangle.cpp  vec.cpp  vertexArray.cpp
shaders/01_triangle/: 01_triangle.frag  01_triangle.vert
shaders/01_triangles/: triangles.vert
shaders/02_cube/: 02_cube.frag  02_cube.vert
shaders/03_star/: star.frag
shaders/03_texTriangle/: 03_texTriangle.frag  03_texTriangle.vert
shaders/04_filledStar/: filledStar.frag
shaders/04_rdot/: 04_rdot.vert
shaders/05_dot_m/: dot_m.frag
src/00_dot/: 00_dot.c  00_dot.cpp  00_dot.hpp  00_dotInit.c  00_dotSetup.c  00_dotSetup.cpp  00_init.cpp
src/01_triangle/: 01_triangle.cpp  01_triangle.hpp
src/01_triangles/: 01_trianglesInit.c  01_trianglesSetup.c  01_trianglesSetup.cpp
src/02_cube/: 02_cube.cpp  02_cube.hpp  02_cubeSetup.c  02_cubeSetup.cpp
src/03_star/: 03_starSetup.c  03_starSetup.cpp
src/03_texTriangle/: 03_texTriangle.cpp  03_texTriangle.hpp
src/04_filledStar/: 04_filledStarInit.c  04_filledStarSetup.c  04_filledStarSetup.cpp
src/04_rdot/: 04_rdot.cpp  04_rdot.hpp
src/05_dot_m/: 05_dot_m.cpp  05_dot_mSetup.cpp
